--- a/index/index.html
+++ b/index/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- head definitions go here -->
+      <meta property="fb:pages" content="106136214878751" />
     </head>
     <body>
       <h1>hello bleeder gaming<h1>
